# serverless-tg-bot-starter

./: README.md  pyproject.toml
.github/workflows/: pr_check.yml
docs/: README_KK.md  README_RU.md  deployment.md  developer_guide.md
infra/: app.py  cdk.json  stack.py
src/receiver/: main.py
src/receiver/repositories/: sqs_repo.py
src/receiver/services/: api_gateway_utils.py
src/worker/: main.py
src/worker/core/: context.py  dispatcher.py
src/worker/repositories/: __init__.py  telegram_client.py  user_repository.py
src/worker/services/: __init__.py  handlers.py  message_formatter.py
